--- a/samples/BasicUse/BasicUse.csproj
+++ b/samples/BasicUse/BasicUse.csproj
@@ -1,9 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Core\StrategyCoordinator.Core.csproj" />
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="StrategyCoordinator" Version="1.1.0" />
   </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+  
 </Project>
